# correlation-proj

./: .gitignore  README.md  index.html  main.py  pyproject.toml  settings.toml  test_unit.py
.github/workflows/: build.yml
config/: settings.toml
corr/: main.py
src/corr/: config.py  main.py
tests/: test_unit.py
