[project]
name = "qrt-hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipython>=9.4.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
