[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corr"
description = "Correlation matix for stocks"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.11",
    "fastapi>=0.116.1",
    "redis>=6.2.0",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "coverage>=7.10.1",
    "fakeredis>=2.30.3",
    "httpx>=0.28.1",
    "ipython>=9.4.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
